Fix year switcher z-index

--- a/app/assets/stylesheets/gobierto_budgets/map_page.scss
+++ b/app/assets/stylesheets/gobierto_budgets/map_page.scss
@@ -1,3 +1,8 @@
+// Year switcher
+header .year_switcher ul {
+  z-index: 1000002;
+}
+
 // Main map
 #map {
   margin-top: 1.5em;
